# dash-omero-project

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.py
config_files/: config.omero
omero-web/: Dockerfile
omero-web/omero-dash-webapp/: README.md  config.omero  setup.py
omero-web/omero-dash-webapp/omero_dash_webapp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
omero-web/omero-dash-webapp/omerodash/: urls.py  views.py
omero_metrics/: urls.py  views.py
omero_metrics/templates/omero_metrics/: index.html
omero_metrics/templates/omerodash/: index.html
test/: docker-compose.yaml
test/omero-web/: Dockerfile  config.omero
