[tool.poetry]
name = "dash-omero-project"
version = "0.1.0"
description = ""
authors = ["wapaa <oumou.elmouminine.dhmine@insa.ueuromed.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.10 <=3.11"
cookiecutter = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
